# YlivertainenBadDataCraniotomy

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/: Matching Ischemic Stroke_report.html
ylivertainen/: INFERENTIAL.py  THE_REPORT.py  __init__.py  _pathing.py  aesthetics_helpers.py  app.py  cleaning.py  cohort.py  columns_to_canonical.py  config.py  dda.py  eda.py  predictive.py  predictive_modeling.py  schema.py
ylivertainen/data/raw/: testtable_synthetic.csv
ylivertainen/example_table/: testtable_synthetic.csv
ylivertainen/notebooks/: CraniotomyForBadData.ipynb  YLIVERTAINEN_CraniotomyForBadData.ipynb
ylivertainen/tests/: old_cleaning_dupes_test.py  test_cleaning.py  test_cleaning_dupes.py
