[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ylivertainen"
version = "0.1.0"
description = "Clinical tabular pipeline: cleaning, cohort, DDA, EDA, model-frame construction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "ipython>=8.12.0",
  "pytest>=7.4.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ylivertainen*"]
