[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ylivertainen"
version = "0.2.0"
description = "Clinical tabular toolkit for cleaning, cohorting, DDA/EDA, inferential stats, predictive modeling, and reporting."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Andris Zaguzovs" }]
license = { text = "MIT" }
keywords = ["clinical-data-science", "tabular-ml", "stroke", "ehr", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "ipython>=8.12.0",
  "jinja2>=3.1.0",
  "joblib>=1.3.0",
  "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/DrAndrushka"
Repository = "https://github.com/DrAndrushka"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ylivertainen*"]
